# rserver

./: .cursorrules  .gitignore  ALTERNATIVAS-MODELOS.md  COMANDOS-GIT.md  COMO-ADICIONAR-PYPI-TOKEN.md  COMO-PUBLICAR.md  CONTRIBUTING.md  CRIAR-RELEASE-0.0.2.md  DISTRIBUICAO.md  DOCUMENTACAO.md  GUIA-DISTRIBUICAO.md  IMPLEMENTACAO-MULTIPLATAFORMA.md  IMPLEMENTACAO-PROFISSIONAL.md  INDICE.md  INSTALACAO-RAPIDA.md  MULTIPLATAFORMA.md  Makefile  OPEN-SOURCE.md  PLATAFORMAS.md  README-OPEN-SOURCE.md  README-PRINCIPAL.md  README.md  RELEASE-0.0.2-COMPLETO.md  RESUMO-DISTRIBUICAO.md  RESUMO-MULTIPLATAFORMA.md  RESUMO-PUBLICACAO.md  SETUP-REPOSITORIO.md  comfyui-clean-empty-files.sh  comfyui-download-flux-vae.sh  comfyui-download-hidream.sh  comfyui-download-manual-guide.sh  comfyui-download-model.sh  comfyui-fix-dependencies.sh  comfyui-fix-manager-security.sh  comfyui-install-huggingface-cli.sh  comfyui-install-manager.sh  comfyui-install-node.sh  comfyui-list-models.sh  compactar-wsl.sh  diagnose-webui.sh  (+10 more)
.github/: pull_request_template.md
cli/: CHANGELOG.md  COMO-FUNCIONA.md  GUIA-PUBLICACAO.md  INSTALACAO-GERENCIADORES.md  INSTALL-REMOTE.md  MANIFEST.in  NOMES-SUGERIDOS.md  QUICK-START.md  README-PROFESSIONAL.md  README-PUBLICACAO.md  README.md  RESUMO-PRATICO.md  RESUMO-RAPIDO.md  RESUMO-VISUAL.md  install.ps1  install.sh  pyproject.toml  requirements-dev.txt  rsctl.py  rsctl_new.py  setup.py
cli/Formula/: rserver.rb
cli/docs/: ARCHITECTURE.md  DEVELOPMENT.md  SUMMARY.md
cli/rsctl/: __init__.py  services.json
cli/rsctl/cli/: parser.py
cli/rsctl/core/: __init__.py  config.py  validator.py
cli/rsctl/utils/: colors.py  logger.py  platform.py
cli/rserver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/scripts/: start-cloudflare.sh  start-comfyui.sh  start-webui.sh
cli/src/: __init__.py
cli/src/cli/: __init__.py  commands.py  parser.py
cli/src/core/: cache.py  config.py  manager.py
cli/src/utils/: __init__.py  exceptions.py
cli/tests/: __init__.py  conftest.py
cli/tests/unit/: test_cache.py
docs/: 01-ssh.md  02-tailscale.md  03-vscode.md  04-ollama.md  05-rdp.md  06-cursor-local.md  comfyui-bind-mounts.md  comfyui-data-locations.md  comfyui-gerenciamento.md  comfyui-resolver-problemas.md
windows/: install-tailscale.ps1  (+1 more)
(+6 files in other folders)
